--- a/config/database.yml
+++ b/config/database.yml
@@ -5,19 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: mysql_development
-  pool: 5
-  username: root
-  password: Momose4751
-  host: localhost
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
