--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: portfolio_production
-  username: portfolio
+  username: root
   password: <%= ENV['PORTFOLIO_DATABASE_PASSWORD'] %>
